kubernetes-basic/lab13-deploy-resources-to-kubernetes/lab13.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: NodePort
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.2.0
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 430950558682.dkr.ecr.ap-southeast-1.amazonaws.com/devops-lab13-backend:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 430950558682.dkr.ecr.ap-southeast-1.amazonaws.com/devops-lab13-frontend:latest
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix          
        path: /api*
        backend:
          service:
            name: backend
            port: 
              number: 3000
      - pathType: Prefix          
        path: /*
        backend:
          service:
            name: frontend
            port: 
              number: 3000
